--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://horizon-ui.com/horizon-ui-chakra",
-  "name": "horizon-ui-chakra",
+  "homepage": "https://eSimGo-dashboard.com/",
+  "name": "eSimGo-dashboard",
   "version": "1.0.1",
   "private": true,
   "dependencies": {
