--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
+    "date-fns": "^2.30.0",
     "framer-motion": "^4.1.17",
     "react": "17.0.2",
     "react-apexcharts": "1.4.0",
     "react-calendar": "^3.7.0",
+    "react-csv": "^2.2.2",
     "react-custom-scrollbars-2": "^4.2.1",
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
