--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
+    "semantic-ui-react": "^2.1.4",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "2.0.2",
     "web-vitals": "^1.1.2"
