--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "babel-register": "^6.26.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^4.1.17",
+    "payment": "^2.4.6",
     "react": "17.0.2",
     "react-apexcharts": "1.4.0",
     "react-calendar": "^3.7.0",
+    "react-credit-cards-2": "^1.0.1",
     "react-csv": "^2.2.2",
     "react-custom-scrollbars-2": "^4.2.1",
     "react-dom": "17.0.2",
