--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-credit-cards-2": "^1.0.1",
     "react-csv": "^2.2.2",
     "react-custom-scrollbars-2": "^4.2.1",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
     "react-icons": "^4.3.1",
@@ -39,6 +40,7 @@
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
     "semantic-ui-react": "^2.1.4",
+    "styled-components": "^6.0.4",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "2.0.2",
     "web-vitals": "^1.1.2"
