--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "react-data-table-component": "^7.5.3",
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
+    "react-flags-select": "^2.2.3",
     "react-icons": "^4.3.1",
     "react-is": "^18.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
-    "semantic-ui-react": "^2.1.4",
     "styled-components": "^6.0.4",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "2.0.2",
