--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jwt-decode": "^3.1.2",
     "mysql2": "^3.5.1",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
