--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ build
 /build
 
 /backend/node_modules
+/backend/.env
 
 # misc
 .DS_Store
@@ -26,3 +27,4 @@ build
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+backend/.env
