--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-register": "^6.26.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^4.1.17",
+    "jwt-decode": "^3.1.2",
     "payment": "^2.4.6",
     "react": "17.0.2",
     "react-apexcharts": "1.4.0",
